samples/_failures_safe/1761072290_32b50c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8784d420.c: In function ‘evaluate_expression’:
./samples/SAFE/__tmp_8784d420.c:167:5: error: expected declaration or statement at end of input
  167 |     Parser parser;
      |     ^~~~~~
